deploy/deployment-candidate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iter8-app-candidate
  labels:
    app: iter8-app-candidate
    version: v1
    app.kubernetes.io/instance: gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iter8-app-candidate
      version: v1
  template:
    metadata:
      labels:
        app: iter8-app-candidate
        version: v1
    spec:
      containers:
      - name: iter8-app-candidate
        image: image-registry.openshift-image-registry.svc:5000/default/helloworld:v6c1a794
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
