deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iter8-app-stable
  labels:
    app: iter8-app-stable
    service: iter8-app-stable
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: iter8-app-stable
---
apiVersion: v1
kind: Service
metadata:
  name: iter8-app-candidate
  labels:
    app: iter8-app-candidate
    service: iter8-app-candidate
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: iter8-app-candidate
